--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "repository": "git@github.com:jjenzz/musicoin-schema.git",
   "author": "Musicoin <http://musicoin.org>",
   "scripts": {
-    "start:prod": "NODE_ENV=production node .",
-    "start": "NODE_ENV=development node ."
+    "start": "node ."
   },
   "dependencies": {
     "apollo-server-express": "^1.2.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "faker": "^4.1.0",
     "graphql": "^0.11.7",
     "graphql-tools": "^2.10.0",
-    "merge-graphql-schemas": "^1.3.0"
+    "merge-graphql-schemas": "^1.3.0",
+    "node-fetch": "^2.0.0"
   }
 }
