--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^0.11.7",
     "graphql-tools": "^2.10.0",
     "merge-graphql-schemas": "^1.3.0",
-    "node-fetch": "^2.0.0"
+    "node-fetch": "^2.0.0",
+    "twit": "^2.2.9"
   }
 }
