--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "scripts": {
     "start": "node ."
   },
+  "engines": {
+    "node": "10.5.0"
+  },
   "dependencies": {
     "apollo-server-express": "^1.2.0",
     "body-parser": "^1.18.2",
